--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokéDex</title>
     <link rel="shortcut icon" href="src/images/favicon-32x32.png" type="pokebola.favicon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
+    <link rel="stylesheet" href="src/css/listagem.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https: //fonts.googleapis.com/css2? family= Bebas+Neue & family= Poppins:wght@300;500;800 & display=swap"
+        rel="stylesheet">
+
+        
 </head>
 
 <body>
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -50,15 +61,15 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon  tipo-planta">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbasaur</h2>
                             <span>#002</span>
                         </div>
-                        <span class="tipo">Elétrico</span>
+                        <span class="tipo">Planta</span>
                         <div class="cartao-imagem">
-                            <img src="src/images/bulbasaur.png" alt="imagem do pikachu">
+                            <img src="src/images/bulbasaur.png" alt="imagem do bulbasaur">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
@@ -77,24 +88,24 @@
                             <h3>habilidades</h3>
 
                             <ul>
-                                <li>Choque do Trovão</li>
+                                <li>Chicote de cipó</li>
                                 <li>Cabeçada</li>
-                                <li>Evasão</li>
+                                <li>raio solar</li>
 
                             </ul>
                         </div>
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fogo">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
                             <span>#003</span>
                         </div>
-                        <span class="tipo">Elétrico</span>
+                        <span class="tipo">Fogo</span>
                         <div class="cartao-imagem">
-                            <img src="src/images/charmander.png" alt="imagem do pikachu">
+                            <img src="src/images/charmander.png" alt="imagem do charmander">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
@@ -113,8 +124,8 @@
                             <h3>habilidades</h3>
 
                             <ul>
-                                <li>Choque do Trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Bola de fogo</li>
+                                <li>bafo de calor</li>
                                 <li>Evasão</li>
 
                             </ul>
@@ -122,15 +133,15 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon  tipo-agua">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
                             <span>#004</span>
                         </div>
-                        <span class="tipo">Elétrico</span>
+                        <span class="tipo">Água</span>
                         <div class="cartao-imagem">
-                            <img src="src/images/gyarados.png" alt="imagem do pikachu">
+                            <img src="src/images/gyarados.png" alt="imagem do Gyarados">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
@@ -149,8 +160,8 @@
                             <h3>habilidades</h3>
 
                             <ul>
-                                <li>Choque do Trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Jato de Água</li>
+                                <li>Onda Marítima</li>
                                 <li>Evasão</li>
 
                             </ul>
@@ -158,15 +169,15 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon  tipo-fantasma">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
                             <span>#005</span>
                         </div>
-                        <span class="tipo">Elétrico</span>
+                        <span class="tipo">Fantasma</span>
                         <div class="cartao-imagem">
-                            <img src="src/images/gengar.png" alt="imagem do pikachu">
+                            <img src="src/images/gengar.png" alt="imagem do Gengar">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
@@ -185,8 +196,8 @@
                             <h3>habilidades</h3>
 
                             <ul>
-                                <li>Choque do Trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Susto</li>
+                                <li>Grito</li>
                                 <li>Evasão</li>
 
                             </ul>
@@ -194,15 +205,15 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon  tipo-dragao">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
                             <span>#006</span>
                         </div>
-                        <span class="tipo">Elétrico</span>
+                        <span class="tipo">Dragao</span>
                         <div class="cartao-imagem">
-                            <img src="src/images/dragonite.png" alt="imagem do pikachu">
+                            <img src="src/images/dragonite.png" alt="imagem do dragonite">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
@@ -221,8 +232,8 @@
                             <h3>habilidades</h3>
 
                             <ul>
-                                <li>Choque do Trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Ataque voador</li>
+                                <li>Raio da Garganta</li>
                                 <li>Evasão</li>
 
                             </ul>
@@ -233,7 +244,7 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon">
+                    <li class="pokemon ativo">
                         <img src="src/images/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>
                     </li>
