--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokéDex</title>
-    <link rel="shortcut icon" href="src/images/favicon-32x32.png" type="pokebola.favicon">
+    <link rel="shortcut icon" href="src/images/favicon-32x32.png" type="pokebola.favicon">    
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/cartao.css">
@@ -25,7 +25,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon aberto tipo-eletrico">
+                <div class="cartao-pokemon aberto tipo-eletrico" id="cartao-pikachu">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon  tipo-planta">
+                <div class="cartao-pokemon  tipo-planta" id="cartao-bulbasaur">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbasaur</h2>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-fogo">
+                <div class="cartao-pokemon tipo-fogo" id="cartao-charmander">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon  tipo-agua">
+                <div class="cartao-pokemon  tipo-agua" id="cartao-gyarados">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon  tipo-fantasma">
+                <div class="cartao-pokemon  tipo-fantasma" id="cartao-gengar">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
@@ -205,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon  tipo-dragao">
+                <div class="cartao-pokemon  tipo-dragao" id="cartao-dragonite">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
@@ -244,32 +244,32 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon ativo">
+                    <li class="pokemon ativo" id="pikachu">
                         <img src="src/images/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>
                     </li>
 
-                    <li class="pokemon">
+                    <li class="pokemon" id="bulbasaur">
                         <img src="src/images/cabeca-bulbasaur.png" alt="cabeça do pikachu">
                         <span>Bulbasaur</span>
                     </li>
 
-                    <li class="pokemon">
+                    <li class="pokemon" id="charmander">
                         <img src="src/images/cabeca-charmander.png" alt="cabeça do pikachu">
                         <span>Charmander</span>
                     </li>
 
-                    <li class="pokemon">
+                    <li class="pokemon" id="gyarados">
                         <img src="src/images/cabeca-gyarados.png" alt="cabeça do pikachu">
                         <span>Gyarados</span>
                     </li>
 
-                    <li class="pokemon">
+                    <li class="pokemon" id="gengar">
                         <img src="src/images/cabeca-gengar.png" alt="cabeça do pikachu">
                         <span>Gengar</span>
                     </li>
 
-                    <li class="pokemon">
+                    <li class="pokemon" id="dragonite">
                         <img src="src/images/cabeca-dragonite.png" alt="cabeça do pikachu">
                         <span>Dragonite</span>
                     </li>
@@ -281,9 +281,7 @@
         </div>
     </main>
 
-    <script>
-
-    </script>
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
